src/styles/admin/page.module.css
.name_container {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.main_name_container {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
}

.filters_cont {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.main_name_container svg {
    cursor: pointer;
}

.root_button {
    display: flex;
    flex-direction: row;
    align-items: center;

    text-align: left;
    text-decoration: none;

    gap: .5rem;

    background-color: var(--main-card-color);
    border: 2px dashed var(--main-element-color);
    border-radius: 10px;

    padding: .5rem;
}

.root_button:hover {
    border: 2px solid var(--main-element-color);
}

.buttons_container {
    display: flex;
    flex-direction: column;
    gap: .5rem
}

.users_container {
    display: flex;
    flex-direction: column;
    gap: 1rem
}

.main {
    margin-left: 2rem;
    margin-right: 2rem;
}

.main_container {
    max-width: 1280px;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
}

.user_card {
    width: 100%;
    background-color: var(--main-card-color);
    border-radius: 10px;
    padding: .8rem;
    border: var(--hr-color) 1px solid;
    box-sizing: border-box;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    gap: .5rem;
}

.user_card h3 {
    margin: 0;
}

/* css-lint-disable-rule unused-class*/
.adaptive_grid_parent {
    justify-content: flex-start !important;
}

.username {
    margin: 0;
    color: gray;
    text-decoration: none;
}

.did {
    margin: 0;
    color: gray;
    font-size: .8rem;
}

.name {
    font-size: 1.1rem;
    text-decoration: none;
}

.name:hover {
    text-decoration: underline;
}

.search_main {
    display: flex;
    align-items: center;
}

.search_input {
    background-color: var(--main-card-color);
    border-radius: 10px 0 0 10px;
    border: 1px solid var(--main-element-color);
    height: 2.4rem;
    color: var(--main-text-color);
    font-size: 1rem;
    padding: .5rem;
    box-sizing: border-box;
    overflow: visible;
    outline: none;
    transition: border .15s;
}

.search_button {
    background-color: var(--main-card-color);
    border-radius: 0 10px 10px 0;
    width: 2.4rem;
    height: 2.4rem;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    border: 1px solid var(--main-element-color);
    border-left: none;
    cursor: pointer;
    transition: background-color .15s, border .15s;
}

.search_input:focus {
    border: 1px var(--focus-color) solid;
}

.search_input:focus+.search_button {
    border: 1px var(--focus-color) solid;
    border-left: none;
}

.search_button:hover {
    background-color: var(--main-element-color);
}

@media(max-width: 803px) {
    .user_card {
        width: 100%;
    }

    /* css-lint-disable-rule unused-class*/
    .adaptive_grid_column {
        width: 100% !important;
    }
}

